# shade-rs

./: README.md
shade-rs/: Cargo.toml
shade-rs-core/: Cargo.toml  generate_tests.py
shade-rs-core-macros/: Cargo.toml
shade-rs-core-macros/src/: lib.rs
shade-rs-core/src/: dtypes.rs  lib.rs  parsing_utils.rs
shade-rs-core/src/dtypes/: bool_n.rs  float2.rs  float3.rs  float4.rs  float_n.rs  int_n.rs  mod.rs  numeric.rs  uint_n.rs  vector.rs
shade-rs-core/src/dtypes/tests/: float4.rs  mod.rs
shade-rs-examples/: Cargo.toml
shade-rs-examples/src/: lib.rs  main.rs
shade-rs-macros/: Cargo.toml
shade-rs-macros/src/: code_utils.rs  convenience_wrap.rs  global_variables.rs  lib.rs  mapper.rs  parser.rs
shade-rs/src/: lib.rs
