[package]
name = "shade-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
colored = "2.0.0"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["full", "extra-traits", "visit"] }
